# django-jqgrid

./: .gitignore  .readthedocs.yaml  API_REFERENCE.md  CHANGELOG.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  CUSTOMIZATION_GUIDE.md  FEATURES.md  INSTALLATION_GUIDE.md  JAVASCRIPT_HOOKS.md  MANIFEST.in  PUBLISHING.md  QUICK_API_REFERENCE.md  README.md  README_backup.md  SECURITY_EXAMPLES.md  SECURITY_GUIDE.md  TROUBLESHOOTING.md  __init__.py  bump_version.py  filters.py  mixins.py  publish_package.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  urls.py
.claude/: settings.local.json
django_jqgrid/: README.md  __init__.py  admin.py  api_urls.py  api_views.py  apps.py  context_processors.py  filters.py  mixins.py  models.py  pagination.py  security.py  serializers.py  urls.py  utils.py  views.py
django_jqgrid/django_jqgrid/: filters.py  pagination.py  utils.py
django_jqgrid/django_jqgrid/templatetags/: jqgrid_tags.py
django_jqgrid/migrations/: 0002_alter_gridfilter_value.py
django_jqgrid/templates/django_jqgrid/: base.html  example_page.html  grid_container.html  grid_tag.html  jqgrid_base.html
django_jqgrid/templatetags/: jqgrid_tags.py
docs/: api_reference.md  changelog.md  conf.py  configuration.md  hosting-guide.md  index.rst  installation.md  introduction.md  quickstart.md  requirements.txt  settings.py  urls.py
example/: README.md
example/example_project/: requirements.txt  setup_demo.py  setup_dev.py
example/example_project/demo_app/: admin.py  apps.py  models.py  urls.py  views.py
example/example_project/example_project/: settings.py  urls.py
example_project/: .gitignore  DATA_LOADING_FIX.md  IMPLEMENTATION_SUMMARY.md  IMPORT_FEATURE_DOCUMENTATION.md  README.md  create_sample_data.py  create_test_files.py  db.sqlite3  final_test.py  requirements.txt  sample_categories.csv  sample_products.csv  setup_example.py  test_categories.csv  test_categories.xlsx  test_customers.csv  test_orders.csv  test_products.csv  test_products.xlsx
example_project/example/: README.md  __init__.py  admin.py  apps.py  grid_config.py  jqgrid_pagination.py  models.py  serializers.py  urls.py  views.py
example_project/example_project/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
migrations/: 0001_initial.py
templates/django_jqgrid/: base.html
templatetags/: jqgrid_tags.py
tests/: settings.py  urls.py
(+38 files in other folders)
