[metadata]
name = django-jqgrid
version = attr: django_jqgrid.__version__
description = A Django app for integrating jqGrid with Django REST Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/django-jqgrid
author = Django jqGrid Team
author_email = support@django-jqgrid.org
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    Django>=3.2
    djangorestframework>=3.12.0
    django-filter>=21.1

[options.packages.find]
exclude =
    tests*
    docs*
    example_project*

[options.extras_require]
dev =
    pytest>=6.2
    pytest-django>=4.4
    pytest-cov>=2.12
    black>=21.7b0
    flake8>=3.9
    isort>=5.9
    mypy>=0.910
    django-stubs>=1.9
    djangorestframework-stubs>=1.4
production =
    openpyxl>=3.0.0
    xlsxwriter>=3.0.0
    reportlab>=3.6.0
    Pillow>=8.0.0
    redis>=3.5.0
    celery>=5.1.0
docs =
    sphinx>=4.0
    sphinx-rtd-theme>=0.5
    recommonmark>=0.7

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = 
    .git,
    __pycache__,
    .pytest_cache,
    .mypy_cache,
    migrations,
    venv,
    env,
    build,
    dist

[isort]
profile = black
multi_line_output = 3
line_length = 88
known_django = django
known_first_party = django_jqgrid
sections = FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER